--- a/Tarea3/queue/pom.xml
+++ b/Tarea3/queue/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>Tarea3</artifactId>
+	<artifactId>queue</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Tarea3</name>
+	<name>queue</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
